# sisl

./: ChangeLog  ChangeLog~  INSTALL~  Makefile  Makefile.am  Makefile.am~  Makefile.in  README  aclocal.m4  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.ac~  libtool  log
autom4te.cache/: output.0  output.1  output.11  output.2  output.5  output.6  output.7  output.9  requests  traces.0  traces.1  traces.2  (+9 more)
mpitests/: Makefile  Makefile.am  Makefile.in  sisl-test.local  sisl-test.mpi  sisl-test.sh  sisl-test.sh.in
mpitests/.deps/: sisl-test.Po
src/: Makefile  Makefile.am  Makefile.in  diagonal.c  diagonal.c~  diagonal.lo  iter-solver-c.c  iter-solver-c.c~  iter-solver-c.lo  iter-solver.c  iter-solver.c~  iter-solver.lo  iter_solver.h  iter_solver.lo  iter_solver_c.lo  libsisl.la  matrix.c  sisl-config  sisl-config.in  sisl-logging.c  sisl-logging.lo  sisl-private.h  sisl-private.h~  sisl.h  sisl_private.h  sislconfig.h  sparse.c  sparse.lo  vector.c
src/.deps/: diagonal.Plo  iter-solver-c.Plo  iter-solver.Plo  iter_solver.Plo  iter_solver_c.Plo  matrix.Plo  sisl-logging.Plo  sparse.Plo  vector.Plo
src/.libs/: libsisl-0.1.so.0  libsisl.la  libsisl.lai
src/RCS/: iter_solver.c,v  iter_solver.h,v  iter_solver_c.c,v  matrix.c,v  sisl-logging.c,v  sisl.h,v  sisl_private.h,v  vector.c,v
tests/: Makefile  Makefile.am  Makefile.in  README  README~  mkmatrices.m  mkmatrices.m~  mktest.m  multiply-c.dat~  multiply.dat~  octave-workspace  sisl-test  sisl-test.c  square.dat~  test-all  test-all~  test.c
tests/.deps/: sisl-test.Po
(+70 files in other folders)
